--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "enable3d": "^0.22.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "three": "^0.125.2"
