--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@enable3d/ammo-on-nodejs": "^0.22.0",
+    "dat.gui": "^0.7.7",
     "enable3d": "^0.22.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
