fixed working on enable3d setup

--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "@enable3d/ammo-on-nodejs": "^0.22.0",
+    "@enable3d/ammo-physics": "^0.22.0",
     "dat.gui": "^0.7.7",
     "enable3d": "^0.22.0",
+    "@types/matter-js": "^0.14.10",
+    "@types/three": "~0.127.0",
+    "matter-js": "^0.16.1",
+    "phaser": "^3.52.0",
+    "poly-decomp": "^0.3.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
     "three": "^0.125.2"
